--- a/index.html
+++ b/index.html
@@ -1,36 +1,29 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beestock Documentation</title>
+<html>
+  <head>
+    <!-- Load the latest Swagger UI code and style from npm using unpkg.com -->
     <script src="https://unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@3/swagger-ui.css"/>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@3/swagger-ui.css" />
+    <title>BeeStock API</title>
+  </head>
+  <body>
+    <div id="swagger-ui"></div> <!-- Div to hold the UI component -->
     <script>
-        window.onload = () => {
-            // Begin Swagger UI call region
-            const ui = SwaggerUIBundle({
-                url: "swagger.json", //Location of Open API spec in the repo
-                // url: "teste.json", //Location of Open API spec in the repo
-                dom_id: '#swagger-ui',
-                deepLinking: true,
-                presets: [
-                    SwaggerUIBundle.presets.apis,
-                    SwaggerUIBundle.SwaggerUIStandalonePreset
-                ],
-                plugins: [
-                    SwaggerUIBundle.plugins.DownloadUrl
-                ],
-            })
-            window.ui = ui
-        }
+      window.onload = function () {
+        // Begin Swagger UI call region
+        const ui = SwaggerUIBundle({
+          url: "beestock.yml", //Location of Open API spec in the repo
+          dom_id: '#swagger-ui',
+          deepLinking: true,
+          presets: [
+            SwaggerUIBundle.presets.apis,
+            SwaggerUIBundle.SwaggerUIStandalonePreset
+          ],
+          plugins: [
+            SwaggerUIBundle.plugins.DownloadUrl
+          ],
+        })
+        window.ui = ui
+      }
     </script>
-</head>
-<body>
-    <body>
-        <div id="swagger-ui"></div> <!-- Div to hold the UI component -->
-    </body>
-</body>
+  </body>
 </html>
