--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
           url: "beestock.yml", //Location of Open API spec in the repo
           dom_id: '#swagger-ui',
           deepLinking: true,
+          filter: false,
+          syntaxHighlight: {
+            activate: true,
+            theme: "nord"
+          },
           presets: [
             SwaggerUIBundle.presets.apis,
             SwaggerUIBundle.SwaggerUIStandalonePreset
